<resources>
    <string name="app_name">File Downloader</string>

    <!--permissions-->
    <string name="dialog_permission_title">Please allow all the necessary permissions</string>
    <string name="dialog_permission_default_message">Please allow</string>
    <string name="dialog_permission_button_positive">OK</string>

    <!--error-->
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="network_not_supported">Server could not return Headers data!</string>
    <string name="socket_timeout">Connection timeout!</string>
    <string name="error_default">Something went wrong!</string>
    <string name="error_no_permission">Runtime permissions required !</string>
    <string name="error_select_directory_failed">Failed to select directory!</string>
    <string name="error_write_permission">No write permission to save files!</string>
    <string name="error_invalid_url">Url is invalid! Try another url.</string>
    <string name="error_invalid_directory">Select a valid destination directory!</string>
    <string name="error_protected_directory">Create or choose another folder.\nThis is to protect privacy</string>
    <string name="error_invalid_destination_path">Destination folder is wrong!</string>
    <string name="error_invalid_name">Bad file name!</string>
    <string name="error_invalid_path">Bad file path!</string>
    <string name="error_invalid_uri">Failed to parse file path!</string>
    <string name="error_invalid_extension">Bad fIle extension!</string>
    <string name="error_invalid_mime_type">Bad MIME Type!</string>
    <string name="error_failed_to_queue">Failed to add!</string>
    <string name="error_failed_create_file">File not created in selected folder</string>
    <string name="error_failed_to_download">Failed to download</string>
    <string name="error_paused_download">Download paused</string>
    <string name="error_waiting_for_wifi">Waiting for WiFi</string>
    <string name="error_waiting_for_network">Waiting for Network</string>
    <string name="error_waiting_in_queue">Waiting in queue</string>
    <string name="error_no_relevant_app">No relevant app found!</string>
    <string name="something_went_wrong">Something went wrong</string>


    <string name="add">Add</string>
    <string name="pause_all">Pause all</string>
    <string name="resume_all">Resume all</string>
    <string name="settings">Settings</string>
    <string name="no_downloads">No Downloads</string>
    <string name="max_parallel_downloads">Max Parallel Downloads</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_download">Add New Download</string>
    <string name="enter_link">Enter Link</string>
    <string name="grabbing_info">Grabbing Info…</string>
    <string name="adding">Adding…</string>
    <string name="file_name">File Name</string>
    <string name="destination_folder">Destination Folder</string>
    <string name="download_over_wi_fi_only">Download over Wi-Fi only</string>
    <string name="done">Done</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="back">Back</string>
    <string name="waiting_in_queue">Waiting in queue</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

</resources>