<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="4dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="4dp"
    android:background="@color/red_10">
    <!--android:layout_height="64dp"-->


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/downloader"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ivIcon"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/plus_jakarta_sans_semi_bold"
            android:text="@string/app_name"
            android:maxLines="1"
            android:textColor="@color/notification_hint"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:fontFamily="@font/plus_jakarta_sans_semi_bold"
            android:gravity="start|center_vertical"
            tools:text="Kafka Kuru Kuru Kafka Kuru Kuru Kuru - 10 hour.mp3"
            android:maxLines="1"
            android:textColor="@color/text_title"
            android:textSize="12sp" />
        <ProgressBar
            android:id="@+id/progressIndicator"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="@color/bg1"
            android:progressTint="@color/blue"
            tools:progress="40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/body"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pause_button"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/pause"
            android:textColor="@color/text_title"
            android:textSize="11sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/resume_button"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/resume"
            android:textColor="@color/text_title"
            android:textSize="11sp"
            android:gravity="center" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bar"/>
        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/cancel"
            android:textColor="@color/text_title"
            android:textSize="11sp"
            android:gravity="center" />
    </LinearLayout>

</RelativeLayout>
