<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/add_new_download"
        android:textSize="@dimen/text_header"
        android:textColor="@color/text_title"/>
    
    <View
        android:id="@+id/headerDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderTittle"
        android:background="@drawable/divider"/>

    <!--Groups-->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="lbLink,etLink,btnClearLink,btnCancel,btnAdd"
        android:visibility="visible"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupGrabbingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="grabbingInfo"
        android:visibility="gone"/>

    <!--add-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/enter_link"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDivider" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLink"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/_13sdp"
        android:background="@drawable/edit_text"
        android:ellipsize="end"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:gravity="center_vertical"
        android:inputType="text"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbLink" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClearLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/etLink"
        app:layout_constraintTop_toTopOf="@+id/etLink"
        app:layout_constraintBottom_toBottomOf="@+id/etLink"
        android:layout_marginEnd="@dimen/_2sdp"
        android:padding="@dimen/_10sdp"
        app:srcCompat="@drawable/close"
        android:background="@android:color/transparent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/etLink"
        android:background="@drawable/button_secondary"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/text_title"
        android:textColor="@color/text_title"
        android:fontFamily="@font/plus_jakarta_sans_bold"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLink"
        android:background="@drawable/button_primary"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="@dimen/text_title"
        android:textColor="@color/white"
        android:fontFamily="@font/plus_jakarta_sans_bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/grabbingInfo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_280sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_semi_bold"
            android:text="@string/grabbing_info"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_header"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>