<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:background="@color/white">


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/downloader"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ivIcon"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                android:text="@string/app_name"
                android:maxLines="1"
                android:textColor="@color/text_title"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/tv_notific_small_old_eta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/plus_jakarta_sans_semi_bold"
                android:textColor="@color/notification_hint"
                android:textSize="8sp"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressIndicator_small_old"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ivIcon"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/footer"
        android:progressBackgroundTint="@color/bg1"
        android:progressTint="@color/blue"
        tools:progress="40" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_notific_small_old_pause"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/pause"
            android:textColor="@color/text_title"
            android:textSize="12sp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"/>
        <TextView
            android:id="@+id/btn_notific_small_old_resume"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/resume"
            android:textColor="@color/text_title"
            android:textSize="12sp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/bar"/>
        <TextView
            android:id="@+id/btn_notific_small_old_cancel"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/cancel"
            android:textColor="@color/text_title"
            android:textSize="12sp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"/>
    </LinearLayout>

</RelativeLayout>
